--- a/style/style.scss
+++ b/style/style.scss
@@ -10,7 +10,7 @@ body {
   font-family: Consolas monospace;
 }
 
-html, body, div:not(.wrapper), canvas {
+html, body, div:not(.wrapper):not(.panel), canvas {
   width: 100%;
   height: 100%;
   display: block;
@@ -43,4 +43,13 @@ div.wrapper {
 canvas {
   image-rendering: crisp-edges;
   border: 1px solid red;
+}
+
+.panel {
+  border: 1px solid gray;
+  font-weight: bold;
+  span {
+    font-weight: normal;
+    font-style: italic;
+  }
 }
