--- a/style/style.scss
+++ b/style/style.scss
@@ -10,7 +10,7 @@ body {
   font-family: Consolas monospace;
 }
 
-html, body, div:not(.wrapper):not(.panel), canvas {
+html, body, #main, #game-panel, canvas {
   width: 100%;
   height: 100%;
   display: block;
@@ -21,8 +21,7 @@ html, body, div:not(.wrapper):not(.panel), canvas {
   width: 80%;
 
   .wrapper {
-    height: calc(100% - 4em);
-    padding: 1em;
+    height: calc(100% - 2em);
   }
 }
 
@@ -30,9 +29,17 @@ html, body, div:not(.wrapper):not(.panel), canvas {
   float: right;
   width: 20%;
 
+  h2 {
+    padding: 6px;
+    margin: 0;
+  }
+
   .wrapper {
     overflow-x: hidden;
     overflow-y: auto;
+    & > div {
+      border: 1px solid gray;
+    }
   }
 }
 
@@ -42,12 +49,17 @@ div.wrapper {
 
 canvas {
   image-rendering: crisp-edges;
-  border: 1px solid red;
+  border: 1px solid gray;
 }
 
 .panel {
-  border: 1px solid gray;
   font-weight: bold;
+  padding: 6px;
+  margin-bottom: 4px;
+
+  h3 {
+    margin: 0;
+  }
   span {
     font-weight: normal;
     font-style: italic;
