--- a/style/style.css
+++ b/style/style.css
@@ -8,7 +8,7 @@ html, body {
 body {
   font-family: Consolas monospace; }
 
-html, body, #main, #game-panel, canvas {
+html, body, #main, #game-panel, canvas#simulation {
   width: 100%;
   height: 100%;
   display: block; }
@@ -47,5 +47,18 @@ canvas {
   .panel span {
     font-weight: normal;
     font-style: italic; }
+
+canvas#cell-tracker {
+  width: 100%;
+  height: 200px; }
+
+div.smoothie-chart-tooltip {
+  background: #444;
+  padding: 1em;
+  margin-top: 20px;
+  font-family: consolas monospace;
+  color: white;
+  font-size: 10px;
+  pointer-events: none; }
 
 /*# sourceMappingURL=style.css.map */
