--- a/style/style.scss
+++ b/style/style.scss
@@ -65,3 +65,18 @@ canvas {
     font-style: italic;
   }
 }
+
+canvas#cell-tracker {
+  width: 100%;
+  height: 200px;
+}
+
+div.smoothie-chart-tooltip {
+  background: #444;
+  padding: 1em;
+  margin-top: 20px;
+  font-family: consolas monospace;
+  color: white;
+  font-size: 10px;
+  pointer-events: none;
+}
