--- a/style/style.scss
+++ b/style/style.scss
@@ -103,17 +103,18 @@ div.smoothie-chart-tooltip {
 
 
 #panel-simulation-buttons {
-  height: 40px;
+  height: 82px;
   div {
     height: 40px;
     width: 45%;
     border: 1px solid gray;
+    margin-bottom: 2px;
     float: left;
 
     line-height: 40px;
     text-align: center;
 
-    &:last-of-type{
+    &:nth-of-type(2n){
       float: right;
     }
   }
@@ -139,6 +140,10 @@ div.smoothie-chart-tooltip {
     &:hover {
       background-color: #4f1313;
     }
+  }
+
+  &.inactive {
+    background-color: #333333;
   }
 
 }
