--- a/style/style.scss
+++ b/style/style.scss
@@ -168,6 +168,10 @@ div.smoothie-chart-tooltip {
     overflow: hidden;
 
     position: absolute;
+
+    & > .node-children {
+      position: absolute;
+    }
   }
 
   .node-spacer {
@@ -240,28 +244,45 @@ div.smoothie-chart-tooltip {
 
     &.node.node-pseudo:hover {
       // TODO while dragging
-      background-color: #555555;
+      background-color: green;
     }
 
-  &.node-decorator {
-    & > div > .node-children > .node-pseudo:first-of-type {
-      opacity: 1;
-      width: auto;
-      transition: visibility 0s, opacity 0.5s linear;
-      margin: 4px;
-    }
-  }
-
-    &.node-seq.hovered {
-      & > div > .node-children {
-        & > .node-spacer, & > .node-pseudo {
-          opacity: 1;
-          width: auto;
-          transition: visibility 0s, opacity 0.5s linear;
-          margin: 4px;
+    &.node-decorator {
+      &.node-hoverable > div > .node-children {
+        & > .node-pseudo:not(:first-of-type), & > .node-spacer:not(:first-of-type) {
+          opacity: 0;
+          width: 0;
+          margin: 0;
         }
+      }
+
+      & > div > .node-children {
+        & > .node:hover {
+          // TODO while dragging
+          background-color: yellow;
+        }
+        & > .node.node-pseudo:hover {
+          // TODO while dragging
+          background-color: green;
+        }
+      }
+
+
+      & > div > .node-children > .node-pseudo:first-of-type {
+        opacity: 1;
+        width: auto;
+        transition: visibility 0s, opacity 0.5s linear;
+        margin: 4px;
       }
     }
 
+    &.node-hoverable.hovered > div > .node-children {
+      & > .node-spacer, & > .node-pseudo {
+        opacity: 1;
+        width: auto;
+        transition: visibility 0s, opacity 0.5s linear;
+        margin: 4px;
+      }
+    }
   }
 }
