--- a/style/style.css
+++ b/style/style.css
@@ -142,17 +142,10 @@ div.smoothie-chart-tooltip {
     position: absolute; }
     #tree-panel #tree-panel-backplane > .node-children {
       position: absolute; }
-  #tree-panel .node-spacer {
-    opacity: 0;
-    width: 0; }
   #tree-panel .node {
     display: inline-block;
     margin: 5px;
     text-align: center; }
-    #tree-panel .node.node-pseudo {
-      opacity: 0;
-      width: 0;
-      margin: 0; }
     #tree-panel .node span.fa {
       line-height: 40px;
       font-size: 2em; }
@@ -165,7 +158,7 @@ div.smoothie-chart-tooltip {
         height: 40px;
         background-color: #111111;
         border: 1px solid gray;
-        margin: 4px; }
+        margin: 5px; }
     #tree-panel .node.node-leaf > div {
       border-bottom-color: blue; }
       #tree-panel .node.node-leaf > div > span {
@@ -175,31 +168,48 @@ div.smoothie-chart-tooltip {
     #tree-panel .node > div > .node-children > .node-spacer {
       font-size: 10px;
       position: relative;
-      top: 6px; }
+      top: 8px; }
     #tree-panel .node > div > .node-children > .node-spacer:not(:nth-last-of-type(2)) {
-      opacity: 1;
       width: auto;
-      margin: 4px; }
+      margin: 2px; }
     #tree-panel .node.node.node-pseudo:hover {
       background-color: green; }
-    #tree-panel .node.node-decorator.node-hoverable > div > .node-children > .node-pseudo:not(:first-of-type), #tree-panel .node.node-decorator.node-hoverable > div > .node-children > .node-spacer:not(:first-of-type) {
+    #tree-panel .node.node-pseudo {
+      opacity: 0;
+      width: 0;
+      margin: 0;
+      height: 0; }
+    #tree-panel .node .node-spacer {
       opacity: 0;
       width: 0;
       margin: 0; }
-    #tree-panel .node.node-decorator > div > .node-children > .node:hover {
+    #tree-panel .node.node-hoverable.hovered > div > .node-children > .node-spacer {
+      opacity: 1;
+      width: auto;
+      transition: visibility 0s, opacity 0.5s linear;
+      height: 50px; }
+    #tree-panel .node.node-hoverable.hovered > div > .node-children > .node-pseudo {
+      opacity: 1;
+      width: auto;
+      transition: visibility 0s, opacity 0.5s linear;
+      height: 50px;
+      margin: 5px; }
+    #tree-panel .node.node-hoverable > div > .node-children > .node-pseudo, #tree-panel .node.node-hoverable > div > .node-children > .node-spacer:only-of-type {
+      opacity: 0;
+      width: 0;
+      height: 0; }
+    #tree-panel .node.node-hoverable > div > .node-children > .node-pseudo:only-of-type {
+      opacity: 1;
+      width: auto;
+      margin: 5px;
+      height: 50px; }
+    #tree-panel .node.node-hoverable.node-decorator > div > .node-children > .node-pseudo:not(:only-of-type), #tree-panel .node.node-hoverable.node-decorator > div > .node-children > .node-spacer {
+      opacity: 0;
+      width: 0;
+      height: 0;
+      margin: 0; }
+    #tree-panel .node.node-hoverable.node-decorator > div > .node-children > .node:not(.node-pseudo):hover {
       background-color: yellow; }
-    #tree-panel .node.node-decorator > div > .node-children > .node.node-pseudo:hover {
-      background-color: green; }
-    #tree-panel .node.node-decorator > div > .node-children > .node-pseudo:first-of-type {
-      opacity: 1;
-      width: auto;
-      transition: visibility 0s, opacity 0.5s linear;
-      margin: 4px; }
-    #tree-panel .node.node-hoverable.hovered > div > .node-children > .node-spacer, #tree-panel .node.node-hoverable.hovered > div > .node-children > .node-pseudo {
-      opacity: 1;
-      width: auto;
-      transition: visibility 0s, opacity 0.5s linear;
-      margin: 4px; }
 
 #new-node {
   pointer-events: none;
