--- a/style/style.css
+++ b/style/style.css
@@ -153,12 +153,19 @@ div.smoothie-chart-tooltip {
       float: left; }
     #tree-panel .node > div {
       border: 1px solid gray; }
-      #tree-panel .node > div > span {
-        width: 40px;
-        height: 40px;
-        background-color: #111111;
-        border: 1px solid gray;
-        margin: 5px; }
+      #tree-panel .node > div > .node-parent {
+        display: flex;
+        justify-content: center; }
+        #tree-panel .node > div > .node-parent span {
+          width: 40px;
+          height: 40px;
+          background-color: #111111;
+          margin: 5px; }
+        #tree-panel .node > div > .node-parent div {
+          width: 50px;
+          height: 50px;
+          border: 1px solid gray;
+          margin: 2px; }
     #tree-panel .node.node-leaf > div {
       border-bottom-color: blue; }
       #tree-panel .node.node-leaf > div > span {
@@ -171,9 +178,8 @@ div.smoothie-chart-tooltip {
       top: 8px; }
     #tree-panel .node > div > .node-children > .node-spacer:not(:nth-last-of-type(2)) {
       width: auto;
-      margin: 2px; }
-    #tree-panel .node.node.node-pseudo:hover {
-      background-color: green; }
+      margin: 2px;
+      opacity: 1; }
     #tree-panel .node.node-pseudo {
       opacity: 0;
       width: 0;
@@ -203,13 +209,18 @@ div.smoothie-chart-tooltip {
       width: auto;
       margin: 5px;
       height: 50px; }
+    #tree-panel .node:hover.hovered > div > .node-parent > div {
+      background-color: #90860b; }
+    #tree-panel .node.node-hoverable:hover > div > .node-children > .node-pseudo .node-parent > div {
+      background-color: green; }
+    #tree-panel .node.node-hoverable > div {
+      padding: 0 10px; }
     #tree-panel .node.node-hoverable.node-decorator > div > .node-children > .node-pseudo:not(:only-of-type), #tree-panel .node.node-hoverable.node-decorator > div > .node-children > .node-spacer {
       opacity: 0;
       width: 0;
       height: 0;
-      margin: 0; }
-    #tree-panel .node.node-hoverable.node-decorator > div > .node-children > .node:not(.node-pseudo):hover {
-      background-color: yellow; }
+      margin: 0;
+      pointer-events: none; }
 
 #new-node {
   pointer-events: none;
